--- a/dsm-refs.bib
+++ b/dsm-refs.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Wed, 09 Jan 2013.
+%% Created using Papers on Wed, 06 Feb 2013.
 %% http://mekentosj.com/papers/
 
 @article{Baddeley:2000to,
@@ -38,7 +38,7 @@ year = {2009},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-12T20:08:02GMT+00:00},
-date-modified = {2012-11-06T16:20:05GMT+00:00},
+date-modified = {2013-02-05T20:02:38GMT+00:00},
 url = {http://www.iwcoffice.org/_documents/sci_com/sc61docs/SC-61-IA14.pdf},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf},
 file = {{Bravington--2009.pdf:/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf:application/pdf}},
@@ -303,6 +303,27 @@ file = {{Marques-The_Auk-2007.pdf:/Users/dill/Dropbox/Papers2/2007/Marques-The_A
 uri = {\url{papers2://publication/uuid/BA1139E9-4364-46DD-9DE2-1773FF9679E6}}
 }
 
+@article{Marra:2011eq,
+author = {Marra, Giampiero and Miller, David Lawrence and Zanin, Luca},
+title = {{Modelling the spatiotemporal distribution of the incidence of resident foreign population}},
+journal = {Statistica Neerlandica},
+year = {2011},
+volume = {66},
+number = {2},
+pages = {133--160},
+month = nov,
+doi = {10.1111/j.1467-9574.2011.00500.x},
+language = {English},
+read = {Yes},
+rating = {0},
+date-added = {2012-10-14T16:37:06GMT+00:00},
+date-modified = {2013-02-06T21:16:45GMT+00:00},
+abstract = {Many European countries have recently experienced a substantial increase in the proportion of immigrants in their populations. The incidence of resident foreigners calculated at a national level does not provide information on the local spatial and temporal ... 
+},
+url = {http://doi.wiley.com/10.1111/j.1467-9574.2011.00500.x},
+uri = {\url{papers2://publication/doi/10.1111/j.1467-9574.2011.00500.x}}
+}
+
 @book{McCullagh:1989ux,
 author = {McCullagh, Peter and Nelder, John A},
 title = {{Generalized Linear Models}},
@@ -414,15 +435,17 @@ uri = {\url{papers2://publication/uuid/C505FA0C-6720-42D8-9FB2-9668709A2B5B}}
 }
 
 @article{Royle:2004tu,
-author = {Royle, J Andrew and Dawson, DK},
+author = {Royle, J.A. and Dawson, D.K. and Bates, S.},
 title = {{Modeling abundance effects in distance sampling}},
 journal = {Ecology},
 year = {2004},
+volume = {85},
+number = {6},
+pages = {1591--1597},
 read = {Yes},
 rating = {0},
 date-added = {2011-10-23T11:08:34GMT+00:00},
-date-modified = {2013-01-09T18:12:18GMT+00:00},
-abstract = {Distance - sampling methods are commonly used in studies of animal populations to estimate population density. A common objective of such studies is to evaluate the relationship between abundance or density and covariates that describe animal habitat or other ...},
+date-modified = {2013-02-06T21:16:19GMT+00:00},
 url = {http://www.esajournals.org/doi/pdf/10.1890/03-3127},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Royle-Ecology-2004.pdf},
 file = {{Royle-Ecology-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Royle-Ecology-2004.pdf:application/pdf}},
@@ -562,7 +585,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2011-03-16T13:12:31GMT+00:00},
-date-modified = {2012-12-08T16:41:24GMT+00:00},
+date-modified = {2013-01-16T15:07:46GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Williams-Conservation_Biology-2011.pdf},
 file = {{Williams-Conservation_Biology-2011.pdf:/Users/dill/Dropbox/Papers2/2011/Williams-Conservation_Biology-2011.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1111/j.1523-1739.2011.01656.x}}
@@ -596,7 +619,7 @@ pages = {3--36},
 read = {Yes},
 rating = {0},
 date-added = {2011-05-11T09:04:24GMT+00:00},
-date-modified = {2013-01-08T19:04:27GMT+00:00},
+date-modified = {2013-02-05T20:03:19GMT+00:00},
 abstract = {... JR Statist. Soc. B (2011) 73, Part 1, pp. Fast  stable  restricted  maximum  likelihood and marginal likelihood  estimation of semiparametric  generalized  linear  models Simon N. Wood University of Bath, Bath, UK [Received May 2009. Final revision April 2010] Summary. ...},
 url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1467-9868.2010.00749.x/full},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2011.pdf},
