--- a/appendix 2/varprop.tex
+++ b/appendix 2/varprop.tex
@@ -11,7 +11,7 @@
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 
 \title{Appendix B: Calculation of variance in density surface models}
-\author{David L. Miller}
+\author{David L. Miller, M. Louise Burt, Eric A. Rexstad and Len Thomas}
 %\date{}                                           % Activate to display a given date or no date
 
 \begin{document}
@@ -35,7 +35,7 @@ Writing $\hat{p}_j$ explicitly as a function of the estimated detection function
 \exp\left[ \mathbb{E}(n_j) \right] &= \log\left[p_j(\bm{\hat{\theta}})A_j\right] + \sum_{k=1}^K f_k(z_{jk}), \\
 &= \log\left(A_j\right) + \log\left[p_j(\bm{\hat{\theta}})\right] + \sum_{k=1}^K f_k(z_{jk}).
 \end{align*}
-Now, let's add in another term to the model. The new term is the derivative of $\log\left[ \hat{p}(\bm{\hat{\theta}})\right]$ multiplied by $\gamma =(\bm{\theta} - \bm{\hat{\theta}})$.
+At this point we add another term to the model. This new term is the derivative of $\log\left[ \hat{p}(\bm{\hat{\theta}})\right]$ multiplied by $\gamma =(\bm{\theta} - \bm{\hat{\theta}})$.
 \begin{equation}
 \exp\left[ \mathbb{E}(n_j) \right] = \log\left(A_j\right) + \log\left[p_j(\bm{\hat{\theta}})\right] + \frac{ d \log p(\bm{\theta})}{d\bm{\theta}} \Big\vert_{\bm{\theta} = \hat{\bm{\theta}}} \gamma + \sum_{k=1}^K f_k(z_{jk}).
 \label{extra-term}
@@ -44,7 +44,9 @@ This term has basically no effect on the model, since, using the definition of a
 \begin{equation*}
 \frac{ d \log p(\bm{\theta})}{d\bm{\theta}} \Big\vert_{\bm{\theta} = \hat{\bm{\theta}}} = \left\{\log\left[p(\hat{\bm{\theta}} + \delta)\right] - \log\left[p(\hat{\bm{\theta}})\right]\right\}\delta^{-1},
 \end{equation*}
-we can write (\ref{extra-term}) as:
+(if we assume that $\gamma$ is small enough such that $\gamma \approx \delta$).
+
+We may then write (\ref{extra-term}) as:
 \begin{align*}
 \exp\left[ \mathbb{E}(n_j) \right] &= \log\left(A_j\right) + \log\left[p_j(\bm{\hat{\theta}})\right] + \frac{ d \log p(\bm{\theta})}{d\bm{\theta}} \Big\vert_{\bm{\theta} = \hat{\bm{\theta}}} \gamma + \sum_{k=1}^K f_k(z_{jk}),\\
 &= \log\left(A_j\right) + \log\left[p_j(\bm{\hat{\theta}})\right] + \left\{\log\left[p(\hat{\bm{\theta}} + \delta)\right] - \log\left[p(\hat{\bm{\theta}})\right]\right\}\delta^{-1} \gamma + \sum_{k=1}^K f_k(z_{jk}).
@@ -56,25 +58,28 @@ Assuming that $\bm{\theta}$ and $\bm{\hat{\theta}}$ are ``close'' we can say tha
 &\approx \log\left(A_j\right) + + \log\left[p(\bm{\theta})\right] + \sum_{k=1}^K f_k(z_{jk}).
 \end{align*}
 
-So this extra term does not have a large effect on the resulting GAM. It does however have an effect on the variance estimates derived from the model.
+So this extra term does not have a large effect on the resulting GAM. It does however have an effect on the variance estimates derived from the model. In practice, we can look at the difference between the model coefficients in the model with an without the extra term to check that there has been no large change in the model.
 
 \section{Calculating the variance of the abundance}
 
 To find the variance of the predicted abundance we are finding the variance of a function of the linear predictor (in the case of the abundance, this is simply the sum). We begin by revising some basic GAM theory before moving on to the specific case of DSMs. 
 
-When we have the identity link, finding the variance of some function of the model is relatively easy. The \texttt{lpmatrix} \citep[][page 245]{Wood:2006wz} is used, that is the matrix $\bm{X}_{p}$ such that:
+When the identity link is used, finding the variance of some function of the model is relatively easy. The \texttt{lpmatrix} \citep[][page 245]{Wood:2006wz} is used, that is the matrix $\bm{X}_{p}$ such that:
 $$
 \hat{\bm{\eta}}_p = \bm{X}_{p} \hat{\bm{\beta}}
 $$
-ie. it maps the model parameters to the linear predictor. Since we can obtain $\bm{V}_{\beta}$, the parameter covariance matrix, we can then use $\bm{X}_{p}$ to find the covariance matrix for the linear predictor using:
+i.e. $\bm{X}_{p}$ maps the model parameters ($\hat{\bm{\beta}}$) to the linear predictor ($\hat{\bm{\eta}}_p$). We can then use $\bm{X}_{p}$ to find the covariance matrix for the linear predictor if we can estimate the parameter covariance matrix ($\bm{V}_{\beta}$):
 $$
-\bm{V}_{\hat{\eta}_p} = X_p \bm{V}_{\hat{\beta}} X_p^\text{T}
+\bm{V}_{\hat{\eta}_p} = X_p \bm{V}_{\hat{\beta}} X_p^\text{T}.
 $$
-linear functions of the linear predictor can be calculated using this method (just changing the pre- and post-multipier). 
 
-In the non-linear case (i.e. when the link is not identity), it's a bit more tricky. First note that the distribution of the parameters (given the data) is multivariate normal with mean as the parameter estimates and the covariance matrix of the parameters. (i.e. $\bm{\beta} \sim N(\hat{\bm{\beta}}, \bm{V_{\hat{\beta}}})$). 
+Only linear functions of the linear predictor can be calculated using this method but this just consists of changing the pre- and post-multiplying matrices. When the link function is not the identity calculations are not so straightforward, we now illustrate two ways of obtaining variance estimates when using a non-identity link function.
 
-The following algorithm is suggested by \citep[][page 246]{Wood:2006wz} for the non-identity link case:
+\subsection{Calculation by simulation}
+
+First note that the distribution of the parameters (given the data) is multivariate normal with mean as the parameter estimates and the covariance matrix of the parameters. (i.e. $\bm{\beta} \sim N(\hat{\bm{\beta}}, \bm{V_{\hat{\beta}}})$). 
+
+The following algorithm is suggested by \citep[][page 246]{Wood:2006wz}:
 \begin{enumerate}
 	\item For $b=1, \ldots, N_b$ do the following:
 	\begin{enumerate}
@@ -82,17 +87,18 @@ The following algorithm is suggested by \citep[][page 246]{Wood:2006wz} for the 
 		\item Calculate $\hat{\eta}_b = \exp(\bm{X}_{p} \bm{\beta}_b)$ (e.g. if we are using the log-link)
 		\item Sum over the survey area
 	\end{enumerate}
-	\item  Calculate the appropriate summary statistics, e.g. median, 95% quantiles etc over $b$.
+	\item  Calculate the appropriate summary statistics, e.g. median, 95\% quantiles etc over $b$.
 \end{enumerate}
 
-This may well be unnecessary and it may well be easier and more efficient to use the delta method:
+In practice $N_b$ does not have to be particularly large, \cite{Marra:2011eq} achieve good results with $N_b=100$.
+
+\subsection{Calculation by the delta method}
+
+Simulation may well be unnecessary and it may well be easier and more efficient to use the delta method:
 $$
 \left(\frac{\partial^2 \log_e \eta}{\partial \eta^2} \Big{\vert}_{\eta=\hat{\eta}} \circledast \bm{X}_{p} \right) \bm{V}_{p} \left( \frac{\partial^2 \log_e \eta}{\partial \eta^2} \Big{\vert}_{\eta=\hat{\eta}} \circledast \bm{X}_{p} \right)^\text{T},
 $$
 where $\frac{\partial^2 \log_e \eta}{\partial \eta^2} \Big{\vert}_{\eta=\hat{\eta}}$ is the vector of second derivatives of the link evaluated at the values of the linear predictor and $\circledast$ denotes \textsf{R}-style matrix-vector multiplication. The delta method inflates the variance based on the uncertainty in the linear predictor.
-
-The delta method may be more useful in general because once the variance is so big that the delta method doesn't work, then the estimate is so bad that there is not much point in expending extra effort to work out bad it is.
-
 
 
 \bibliography{../dsm-refs.bib}
