--- a/dsm-refs.bib
+++ b/dsm-refs.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Wed, 06 Feb 2013.
+%% Created using Papers on Fri, 08 Feb 2013.
 %% http://mekentosj.com/papers/
 
 @article{Baddeley:2000to,
@@ -11,7 +11,7 @@ number = {3},
 pages = {283--322},
 rating = {0},
 date-added = {2012-05-29T18:55:50GMT+00:00},
-date-modified = {2012-11-06T16:18:42GMT+00:00},
+date-modified = {2013-02-06T21:17:30GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2000/Baddeley--2000.pdf},
 file = {{Baddeley--2000.pdf:/Users/dill/Dropbox/Papers2/2000/Baddeley--2000.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/84517B79-4C59-42FF-A6E3-AD735D646120}}
@@ -24,7 +24,7 @@ year = {2010},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-12T20:08:02GMT+00:00},
-date-modified = {2012-10-14T16:30:37GMT+00:00},
+date-modified = {2013-02-06T21:17:31GMT+00:00},
 url = {http://www.iwcoffice.org/_documents/sci_com/SC62docs/SC-62-IA12Rev.pdf},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Bravington--2010.pdf},
 file = {{Bravington--2010.pdf:/Users/dill/Dropbox/Papers2/2010/Bravington--2010.pdf:application/pdf}},
@@ -38,7 +38,7 @@ year = {2009},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-12T20:08:02GMT+00:00},
-date-modified = {2013-02-05T20:02:38GMT+00:00},
+date-modified = {2013-02-06T21:17:33GMT+00:00},
 url = {http://www.iwcoffice.org/_documents/sci_com/sc61docs/SC-61-IA14.pdf},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf},
 file = {{Bravington--2009.pdf:/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf:application/pdf}},
@@ -79,7 +79,7 @@ pages = {59--80},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-09T20:12:20GMT+00:00},
-date-modified = {2012-10-26T17:10:04GMT+00:00},
+date-modified = {2013-02-06T21:17:33GMT+00:00},
 url = {http://www.ccamlr.org/ccamlr_science/Vol-11-2004/04candy.pdf},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Candy-CCAMLR_Science-2004.pdf},
 file = {{Candy-CCAMLR_Science-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Candy-CCAMLR_Science-2004.pdf:application/pdf}},
@@ -94,7 +94,7 @@ year = {1979},
 pages = {829--836},
 rating = {0},
 date-added = {2012-06-05T03:36:13GMT+00:00},
-date-modified = {2012-10-04T19:41:12GMT+00:00},
+date-modified = {2013-02-06T21:17:34GMT+00:00},
 url = {http://www.jstor.org/stable/10.2307/2286407},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/1979/Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf},
 file = {{Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf:/Users/dill/Dropbox/Papers2/1979/Cleveland-Journal_of_the_American_Statistical_Association-1979.pdf:application/pdf}},
@@ -112,7 +112,8 @@ isbn = {9780412219108},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:24:23GMT+00:00},
-date-modified = {2012-09-18T23:03:02GMT+00:00},
+date-modified = {2013-02-06T21:17:34GMT+00:00},
+url = {http://www.worldcat.org/title/point-processes/oclc/7088477},
 uri = {\url{papers2://publication/uuid/E99F20A8-EF4D-428E-8D98-4F018BB99682}}
 }
 
@@ -124,7 +125,7 @@ year = {1955},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T19:10:01GMT+00:00},
-date-modified = {2012-09-18T23:02:51GMT+00:00},
+date-modified = {2013-02-06T21:17:35GMT+00:00},
 abstract = {The paper deals with a number of problems of statistical analysis connected with events occurring haphazardly in space or time. The topics discussed include: tests of randomness, components of variance, the correlation between events of different types, and a ... 
 },
 url = {http://www.jstor.org/stable/10.2307/2983950},
@@ -140,7 +141,7 @@ isbn = {9780412042317},
 language = {English},
 rating = {0},
 date-added = {2012-10-25T21:11:27GMT+00:00},
-date-modified = {2012-10-25T21:12:03GMT+00:00},
+date-modified = {2013-02-06T21:17:35GMT+00:00},
 abstract = {Statistics is a subject of many uses and surprisingly few effective practitioners. The traditional road to statistical knowledge is blocked, for most, by a formidable wall of mathematics. The approach in 'An Introduction to the Bootstrap' avoids that wall. It - exposes readers to many exciting and useful statistical techniques through real data examples, such as the mouse data, the stamp data, the tooth data and the hormone data; describes various techniques, including nonparametric regression, density estimation, classification trees, and least median squares regression; includes numerous exercises - some involving computing - that provide hands-on experience in applying the concepts and techniques; contains descriptions of a number of different computer programs for the methods discussed; offers a presentation accessible to non-specialists - scientists, engineers, and doctors - that will help them streamline their quantitative research.},
 url = {http://books.google.com/books?id=gLlpIUxRntoC&dq=an+introduction+to+the+bootstrap&hl=&cd=1&source=gbs_api},
 uri = {\url{papers2://publication/uuid/5ED29765-F078-4FC5-A6E3-D160C5309FB5}}
@@ -159,7 +160,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T20:43:14GMT+00:00},
-date-modified = {2012-09-18T23:03:47GMT+00:00},
+date-modified = {2013-02-06T21:17:35GMT+00:00},
 abstract = {Abstract We discuss the following problem: given a random sample {\$}\ mathbf {X}=(X{\_}1, X{\_}2,\ cdots, X{\_}n) {\$} from an unknown probability distribution {\$} F {\$}, estimate the sampling distribution of some prespecified random variable {\$} R (\ mathbf {X}, F) {\$}, on the basis of ... 
 },
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/1979/Efron-Ann._Statist.-1979.pdf},
@@ -179,9 +180,10 @@ doi = {10.1093/biomet/82.4.711},
 language = {English},
 rating = {0},
 date-added = {2012-05-29T19:20:06GMT+00:00},
-date-modified = {2012-09-18T23:03:21GMT+00:00},
+date-modified = {2013-02-06T21:17:36GMT+00:00},
 abstract = {Abstract Markov chain Monte Carlo methods for Bayesian computation have until recently been restricted to problems where the joint distribution of all variables has a density with respect to some fixed standard underlying measure. They have therefore not been ... 
 },
+url = {http://biomet.oxfordjournals.org/content/82/4/711},
 uri = {\url{papers2://publication/doi/10.1093/biomet/82.4.711}}
 }
 
@@ -197,7 +199,7 @@ month = jun,
 doi = {10.5670/oceanog.2009.42},
 rating = {0},
 date-added = {2012-12-21T10:41:26GMT+00:00},
-date-modified = {2012-12-21T10:41:59GMT+00:00},
+date-modified = {2013-02-06T21:17:36GMT+00:00},
 url = {http://www.tos.org/oceanography/archive/22-2_halpin.html},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Halpin-Oceanog.-2009.pdf},
 file = {{Halpin-Oceanog.-2009.pdf:/Users/dill/Dropbox/Papers2/2009/Halpin-Oceanog.-2009.pdf:application/pdf}},
@@ -228,7 +230,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:20:26GMT+00:00},
-date-modified = {2012-10-02T21:09:09GMT+00:00},
+date-modified = {2013-02-06T21:17:37GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf},
 file = {{Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Hedley-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2004.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1198/1085711043578}}
@@ -249,7 +251,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:46:24GMT+00:00},
-date-modified = {2012-09-18T23:04:10GMT+00:00},
+date-modified = {2013-02-06T21:17:37GMT+00:00},
 abstract = {We consider a fully model-based approach for the analysis of distance sampling data. Distance sampling has been widely used to estimate abundance (or density) of animals or plants in a spatially explicit study area. There is, however, no readily available method of making statistical inference on the relationships between abundance and environmental covariates. Spatial Poisson process likelihoods can be used to simultaneously estimate detection and intensity parameters by modeling distance sampling data as a thinned spatial point process. A model-based spatial approach to distance sampling data has three main benefits: it allows complex and opportunistic transect designs to be employed, it allows estimation of abundance in small subregions, and it provides a framework to assess the effects of habitat or experimental manipulation on density. We demonstrate the model-based methodology with a small simulation study and analysis of the Dubbo weed data set. In addition, a simple ad hoc method for handling overdispersion is also proposed. The simulation study showed that the model-based approach compared favorably to conventional distance sampling methods for abundance estimation. In addition, the overdispersion correction performed adequately when the number of transects was high. Analysis of the Dubbo data set indicated a transect effect on abundance via Akaike's information criterion model selection. Further goodness-of-fit analysis, however, indicated some potential confounding of intensity with the detection function.},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Johnson-Biometrics-2010.pdf},
 file = {{Johnson-Biometrics-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Johnson-Biometrics-2010.pdf:application/pdf}},
@@ -280,7 +282,7 @@ pages = {924--935},
 read = {Yes},
 rating = {0},
 date-added = {2011-01-23T23:06:56GMT+00:00},
-date-modified = {2012-07-11T12:18:53GMT+00:00},
+date-modified = {2013-02-06T21:17:37GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2003/Marques-Biometrics-2003.pdf},
 file = {{Marques-Biometrics-2003.pdf:/Users/dill/Dropbox/Papers2/2003/Marques-Biometrics-2003.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/431310FD-EE0C-4EFF-BF51-19DE6D44A652}}
@@ -297,7 +299,7 @@ pages = {1229--1243},
 read = {Yes},
 rating = {0},
 date-added = {2010-07-23T21:49:27GMT+00:00},
-date-modified = {2012-09-28T17:42:51GMT+00:00},
+date-modified = {2013-02-06T21:17:38GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2007/Marques-The_Auk-2007.pdf},
 file = {{Marques-The_Auk-2007.pdf:/Users/dill/Dropbox/Papers2/2007/Marques-The_Auk-2007.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/BA1139E9-4364-46DD-9DE2-1773FF9679E6}}
@@ -317,7 +319,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-10-14T16:37:06GMT+00:00},
-date-modified = {2013-02-06T21:16:45GMT+00:00},
+date-modified = {2013-02-06T21:17:38GMT+00:00},
 abstract = {Many European countries have recently experienced a substantial increase in the proportion of immigrants in their populations. The incidence of resident foreigners calculated at a national level does not provide information on the local spatial and temporal ... 
 },
 url = {http://doi.wiley.com/10.1111/j.1467-9574.2011.00500.x},
@@ -334,7 +336,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T19:34:30GMT+00:00},
-date-modified = {2012-06-19T15:32:55GMT+00:00},
+date-modified = {2013-02-06T21:17:39GMT+00:00},
 abstract = {An outline of generalized linear models; Models for continuous data with constant variance; Binary data; Models for polytomous data; Log-linear models; Conditional likelihoods; Models with constant coefficient of variation; Quasi-likelihood functions; Joint modelling of mean and dispersion; Models with additional non-linear parameters; Model checking; Model for survival data; Components of dispersion; Further topics.},
 url = {http://books.google.com/books?id=h9kFH2_FfBkC&printsec=frontcover&dq=mccullugh+nelder&cd=1&source=gbs_api},
 uri = {\url{papers2://publication/uuid/1E03DBA3-F2EE-4807-AFFC-053B4E1396A0}}
@@ -347,7 +349,7 @@ pages = {1--27},
 read = {Yes},
 rating = {0},
 date-added = {2012-10-30T20:28:53GMT+00:00},
-date-modified = {2012-10-30T20:43:22GMT+00:00},
+date-modified = {2013-02-06T21:17:39GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/Unknown/Miller.pdf},
 file = {{Miller.pdf:/Users/dill/Dropbox/Papers2/Unknown/Miller.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/D1DB0F02-6C2E-464E-AADD-097F06984A27}}
@@ -360,7 +362,7 @@ pages = {1--8},
 read = {Yes},
 rating = {0},
 date-added = {2012-10-30T20:36:50GMT+00:00},
-date-modified = {2012-10-30T20:42:30GMT+00:00},
+date-modified = {2013-02-06T21:17:39GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/Unknown/Miller-1.pdf},
 file = {{Miller-1.pdf:/Users/dill/Dropbox/Papers2/Unknown/Miller-1.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/7C8EF69D-7597-4316-97B2-E948BC8EC41F}}
@@ -379,7 +381,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:36:53GMT+00:00},
-date-modified = {2012-09-18T23:04:33GMT+00:00},
+date-modified = {2013-02-06T21:17:40GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf},
 file = {{Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1007/s13253-010-0024-8}}
@@ -395,7 +397,7 @@ month = sep,
 read = {Yes},
 rating = {0},
 date-added = {2012-07-19T16:03:03GMT+00:00},
-date-modified = {2012-08-21T01:18:28GMT+00:00},
+date-modified = {2013-02-06T21:17:40GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Petersen--2011.pdf},
 file = {{Petersen--2011.pdf:/Users/dill/Dropbox/Papers2/2011/Petersen--2011.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/F2B0044D-77D4-4974-B57E-55CD381E992A}}
@@ -412,7 +414,7 @@ pages = {307--319},
 read = {Yes},
 rating = {0},
 date-added = {2009-11-30T12:47:43GMT+00:00},
-date-modified = {2012-10-09T17:35:29GMT+00:00},
+date-modified = {2013-02-06T21:17:41GMT+00:00},
 url = {http://onlinelibrary.wiley.com/doi/10.1111/1467-9868.00339/full},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2002/Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf},
 file = {{Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf:/Users/dill/Dropbox/Papers2/2002/Ramsay-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2002.pdf:application/pdf}},
@@ -429,7 +431,7 @@ isbn = {9780123740977},
 language = {English},
 rating = {0},
 date-added = {2013-01-09T18:11:21GMT+00:00},
-date-modified = {2013-01-09T18:12:18GMT+00:00},
+date-modified = {2013-02-06T21:17:41GMT+00:00},
 url = {http://books.google.com/books?id=rDppWpVP6a0C&printsec=frontcover&dq=Hierarchical+modeling+and+inference+in+ecology+inauthor:royle&hl=&cd=1&source=gbs_api},
 uri = {\url{papers2://publication/uuid/C505FA0C-6720-42D8-9FB2-9668709A2B5B}}
 }
@@ -445,7 +447,7 @@ pages = {1591--1597},
 read = {Yes},
 rating = {0},
 date-added = {2011-10-23T11:08:34GMT+00:00},
-date-modified = {2013-02-06T21:16:19GMT+00:00},
+date-modified = {2013-02-06T21:17:59GMT+00:00},
 url = {http://www.esajournals.org/doi/pdf/10.1890/03-3127},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Royle-Ecology-2004.pdf},
 file = {{Royle-Ecology-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Royle-Ecology-2004.pdf:application/pdf}},
@@ -463,7 +465,7 @@ pages = {319--392},
 read = {Yes},
 rating = {0},
 date-added = {2011-08-24T16:43:20GMT+00:00},
-date-modified = {2012-05-29T19:55:38GMT+00:00},
+date-modified = {2013-02-06T21:17:41GMT+00:00},
 abstract = {TeX output 2009.03.07:1118},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Rue-J._R._Statist._Soc._B-2009.pdf},
 file = {{Rue-J._R._Statist._Soc._B-2009.pdf:/Users/dill/Dropbox/Papers2/2009/Rue-J._R._Statist._Soc._B-2009.pdf:application/pdf}},
@@ -474,13 +476,14 @@ uri = {\url{papers2://publication/uuid/C2352D3E-B0A8-45F7-BD65-E4EC4990D929}}
 author = {Scott-Hayward, L A S and MacKenzie, M L and Donovan, C R and Walker, C G and Ashe, E},
 title = {{Complex Region Spatial Smoother (CReSS)}},
 journal = {Journal of Computational and Graphical Statistics},
+year = {2013},
 affiliation = {University of St Andrews},
 read = {Yes},
 rating = {0},
 date-added = {2012-06-05T03:37:06GMT+00:00},
-date-modified = {2013-01-08T19:05:20GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/Unknown/Scott-Hayward-Journal_of_Computational_and_Graphical_Statistics.pdf},
-file = {{Scott-Hayward-Journal_of_Computational_and_Graphical_Statistics.pdf:/Users/dill/Dropbox/Papers2/Unknown/Scott-Hayward-Journal_of_Computational_and_Graphical_Statistics.pdf:application/pdf}},
+date-modified = {2013-02-08T16:12:04GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2013/Scott-Hayward-Journal_of_Computational_and_Graphical_Statistics-2013.pdf},
+file = {{Scott-Hayward-Journal_of_Computational_and_Graphical_Statistics-2013.pdf:/Users/dill/Dropbox/Papers2/2013/Scott-Hayward-Journal_of_Computational_and_Graphical_Statistics-2013.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/34CFE03F-3099-4CE8-B5CD-6907A80F513D}}
 }
 
@@ -494,7 +497,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T19:06:01GMT+00:00},
-date-modified = {2012-09-18T23:04:50GMT+00:00},
+date-modified = {2013-02-06T21:17:42GMT+00:00},
 abstract = {Originally published in 1982, this reprint of the second edition of The Estimation of Animal Abundance and Related Parameters has been described as the "bible" of the field.},
 url = {http://books.google.com/books?id=bnGaPQAACAAJ&dq=seber&cd=10&source=gbs_api},
 uri = {\url{papers2://publication/uuid/8BEB690D-5749-411B-8CAC-901EB9E6606C}}
@@ -514,7 +517,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-01-13T17:32:49GMT+00:00},
-date-modified = {2012-11-06T18:15:09GMT+00:00},
+date-modified = {2013-02-06T21:17:43GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Skaug-Environ_Ecol_Stat-2006.pdf},
 file = {{Skaug-Environ_Ecol_Stat-2006.pdf:/Users/dill/Dropbox/Papers2/2006/Skaug-Environ_Ecol_Stat-2006.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1007/s10651-005-0006-0}}
@@ -532,7 +535,7 @@ doi = {10.1111/j.1365-2664.2009.01737.x},
 read = {Yes},
 rating = {0},
 date-added = {2010-07-14T20:18:23GMT+00:00},
-date-modified = {2012-10-17T18:34:14GMT+00:00},
+date-modified = {2013-02-06T21:17:43GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Thomas-Journal_of_Applied_Ecology-2010.pdf},
 file = {{Thomas-Journal_of_Applied_Ecology-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Thomas-Journal_of_Applied_Ecology-2010.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1111/j.1365-2664.2009.01737.x}}
@@ -549,7 +552,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T19:49:42GMT+00:00},
-date-modified = {2012-09-18T23:05:13GMT+00:00},
+date-modified = {2013-02-06T21:17:43GMT+00:00},
 abstract = {Praise for the Second Edition "This book has never had a competitor. It is the only book that takes a broad approach to sampling . . . any good personal statistics library should include a copy of this book." --Technometrics "Well-written . . . an excellent book on an important subject. Highly recommended." --Choice "An ideal reference for scientific researchers and other professionals who use sampling." --Zentralblatt Math Features new developments in the field combined with all aspects of obtaining, interpreting, and using sample data Sampling provides an up-to-date treatment of both classical and modern sampling design and estimation methods, along with sampling methods for rare, clustered, and hard-to-detect populations. This Third Edition retains the general organization of the two previous editions, but incorporates extensive new material--sections, exercises, and examples--throughout. Inside, readers will find all-new approaches to explain the various techniques in the book; new figures to assist in better visualizing and comprehending underlying concepts such as the different sampling strategies; computing notes for sample selection, calculation of estimates, and simulations; and more. Organized into six sections, the book covers basic sampling, from simple random to unequal probability sampling; the use of auxiliary data with ratio and regression estimation; sufficient data, model, and design in practical sampling; useful designs such as stratified, cluster and systematic, multistage, double and network sampling; detectability methods for elusive populations; spatial sampling; and adaptive sampling designs. Featuring a broad range of topics, Sampling, Third Edition serves as a valuable reference on useful sampling and estimation methods for researchers in various fields of study, including biostatistics, ecology, and the health sciences. The book is also ideal for courses on statistical sampling at the upper-undergraduate and graduate levels.},
 url = {http://books.google.com/books?id=qukULxJ--QAC&printsec=frontcover&dq=intitle:sampling+inauthor:thompson&cd=1&source=gbs_api},
 uri = {\url{papers2://publication/uuid/F844F284-F8FD-45EB-B547-941C0530D788}}
@@ -566,7 +569,7 @@ pages = {209--217},
 read = {Yes},
 rating = {0},
 date-added = {2009-11-30T12:48:08GMT+00:00},
-date-modified = {2012-10-02T21:03:42GMT+00:00},
+date-modified = {2013-02-06T21:17:44GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2007/Wang-Biometrics-2007.pdf},
 file = {{Wang-Biometrics-2007.pdf:/Users/dill/Dropbox/Papers2/2007/Wang-Biometrics-2007.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/4A01252F-01AE-43F8-973D-A4C579C245D2}}
@@ -585,7 +588,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2011-03-16T13:12:31GMT+00:00},
-date-modified = {2013-01-16T15:07:46GMT+00:00},
+date-modified = {2013-02-06T21:17:44GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Williams-Conservation_Biology-2011.pdf},
 file = {{Williams-Conservation_Biology-2011.pdf:/Users/dill/Dropbox/Papers2/2011/Williams-Conservation_Biology-2011.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1111/j.1523-1739.2011.01656.x}}
@@ -602,7 +605,7 @@ pages = {1},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:33:18GMT+00:00},
-date-modified = {2012-10-14T16:28:11GMT+00:00},
+date-modified = {2013-02-06T21:17:17GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Williams--2006.pdf},
 file = {{Williams--2006.pdf:/Users/dill/Dropbox/Papers2/2006/Williams--2006.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/20D0DB21-3CAF-4B76-AE38-663AC0ED1433}}
@@ -619,7 +622,7 @@ pages = {3--36},
 read = {Yes},
 rating = {0},
 date-added = {2011-05-11T09:04:24GMT+00:00},
-date-modified = {2013-02-05T20:03:19GMT+00:00},
+date-modified = {2013-02-06T21:17:17GMT+00:00},
 abstract = {... JR Statist. Soc. B (2011) 73, Part 1, pp. Fast  stable  restricted  maximum  likelihood and marginal likelihood  estimation of semiparametric  generalized  linear  models Simon N. Wood University of Bath, Bath, UK [Received May 2009. Final revision April 2010] Summary. ...},
 url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1467-9868.2010.00749.x/full},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2011.pdf},
@@ -638,7 +641,7 @@ pages = {931--955},
 read = {Yes},
 rating = {0},
 date-added = {2010-03-23T20:11:51GMT+00:00},
-date-modified = {2012-11-06T16:22:17GMT+00:00},
+date-modified = {2013-02-06T21:17:18GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2008/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf},
 file = {{Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf:/Users/dill/Dropbox/Papers2/2008/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2008.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/8326BCA7-727A-494B-8BAD-11AC5255B783}}
@@ -652,7 +655,7 @@ year = {2006},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T17:55:29GMT+00:00},
-date-modified = {2012-10-28T13:52:43GMT+00:00},
+date-modified = {2013-02-06T21:17:18GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Wood--2006.pdf},
 file = {{Wood--2006.pdf:/Users/dill/Dropbox/Papers2/2006/Wood--2006.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/0F51C4D6-4E84-4A13-933F-42596D681835}}
@@ -669,7 +672,7 @@ pages = {95--114},
 read = {Yes},
 rating = {0},
 date-added = {2009-11-30T12:47:43GMT+00:00},
-date-modified = {2012-10-02T21:27:28GMT+00:00},
+date-modified = {2013-02-06T21:17:18GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2003/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf},
 file = {{Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf:/Users/dill/Dropbox/Papers2/2003/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/34D20AF3-652A-4D99-B96D-01D4641008B2}}
