--- a/dsmsim/sim-results.tex
+++ b/dsmsim/sim-results.tex
@@ -88,16 +88,16 @@ For the smaller population size the number of detections was around 90. In this 
 \setlength{\tabcolsep}{0mm}
 \subfigure[]{%
 \begin{tabular}{c}
-\includegraphics*[width=0.4\textwidth]{res-500-1-1.pdf}\\
-\includegraphics*[width=0.4\textwidth]{res-500-2-1.pdf}\\
-%\includegraphics*[width=0.4\textwidth]{res-500-3-1.pdf}
+\includegraphics*[width=0.4\textwidth]{results/res-500-1-1.pdf}\\
+\includegraphics*[width=0.4\textwidth]{results/res-500-2-1.pdf}\\
+\includegraphics*[width=0.4\textwidth]{results/res-500-3-1.pdf}
 \end{tabular}
 }%
 \subfigure[]{%
 \begin{tabular}{c}
-\includegraphics*[width=0.4\textwidth]{res-500-1-2.pdf}\\
-\includegraphics*[width=0.4\textwidth]{res-500-2-2.pdf}\\
-%\includegraphics*[width=0.4\textwidth]{res-500-3-2.pdf}
+\includegraphics*[width=0.4\textwidth]{results/res-500-1-2.pdf}\\
+\includegraphics*[width=0.4\textwidth]{results/res-500-2-2.pdf}\\
+\includegraphics*[width=0.4\textwidth]{results/res-500-3-2.pdf}
 \end{tabular}
 }%
 \caption{Results of simulating populations of 5000 individuals in three scenarios (going down the page). Each coloured horizontal line indicates one simulation result and the black vertical line is truth. On the left side results are grouped by simulation and the blue lines give the point estimate of the population for a given simulation. On the right grouping is by method and the blue points indicate the corresponding point estimates.}
